--- a/赛博朋克/package.json
+++ b/赛博朋克/package.json
@@ -41,6 +41,7 @@
     "@vue/tsconfig": "^0.7.0",
     "eslint": "^9.32.0",
     "sass-embedded": "^1.90.0",
+    "stylus": "^0.64.0",
     "typescript": "~5.9.2",
     "unplugin-auto-import": "^20.0.0",
     "unplugin-vue-components": "^29.0.0",
